# docsible

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
docsible/: cli.py  markdown_template.py
docsible/utils/: git.py  mermaid.py  special_tasks_keys.py  yaml.py
examples/: README_demo1.md  README_demo2.md
scripts/: change_version.py
templates/: readme.jinja2
tests/: git_detect_url.py  test_dt_update.py  test_type.py
tests/fixtures/: type_fixture.yml
