[tool.poetry]
name = "docsible"
version = "0.7.14"
description = "Document generator for ansible role/collection"
authors = ["Lucian BLETAN <neuraluc@gmail.com>"]
repository = "https://github.com/docsible/docsible"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.7"
PyYAML = "^6.0.1"
Jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docsible = 'docsible.cli:doc_the_role'